// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge With colors 1`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #535353;
  color: #535353;
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With colors 2`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #F3F3F3;
  color: #F3F3F3;
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With colors 3`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #19BC9B;
  color: #19BC9B;
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With colors 4`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #B4B4B4;
  color: #B4B4B4;
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With colors 5`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #2FA0ED;
  color: #2FA0ED;
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With colors 6`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #0061B9;
  color: #0061B9;
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With colors 7`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #F16622;
  color: #F16622;
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With colors 8`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #FEA000;
  color: #FEA000;
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With colors 9`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #F7981C;
  color: #F7981C;
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With colors 10`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #D8534F;
  color: #D8534F;
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With smaller size 1`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-size: 12px;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #535353;
  color: #535353;
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With solid colors 1`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #535353;
  background-color: #535353;
  color: rgba(255,255,255,1);
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With solid colors 2`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #F3F3F3;
  background-color: #F3F3F3;
  color: rgba(255,255,255,1);
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With solid colors 3`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #19BC9B;
  background-color: #19BC9B;
  color: rgba(255,255,255,1);
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With solid colors 4`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #B4B4B4;
  background-color: #B4B4B4;
  color: rgba(255,255,255,1);
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With solid colors 5`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #2FA0ED;
  background-color: #2FA0ED;
  color: rgba(255,255,255,1);
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With solid colors 6`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #0061B9;
  background-color: #0061B9;
  color: rgba(255,255,255,1);
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With solid colors 7`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #F16622;
  background-color: #F16622;
  color: rgba(255,255,255,1);
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With solid colors 8`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #FEA000;
  background-color: #FEA000;
  color: rgba(255,255,255,1);
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With solid colors 9`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #F7981C;
  background-color: #F7981C;
  color: rgba(255,255,255,1);
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;

exports[`Badge With solid colors 10`] = `
.c0 {
  padding: 0.4em 0.4em;
  display: inline-block;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  border: 1px solid;
  border-radius: 1em;
  border-color: #D8534F;
  background-color: #D8534F;
  color: rgba(255,255,255,1);
}

<span
  class="c0"
  title="12"
>
  12
</span>
`;
